--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -77,6 +77,12 @@
 	* config/rs6000/aix.h (ROUND_TYPE_ALIGN): Change BIGGEST_ALIGNMENT
 	to 64.
 
+	* config/rs6000/darwin.h (ROUND_TYPE_ALIGN): Change BIGGEST_ALIGNMENT
+	to 64.
+
+	* config/rs6000/darwin.h (ROUND_TYPE_ALIGN): Change BIGGEST_ALIGNMENT
+	to 64.
+
 	* config/rs6000/rs6000.c (rs6000_expand_builtin): New.
 	(altivec_expand_builtin): New.
 	(altivec_init_builtins): New.
