--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-07  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-decl.c (pushdecl): Remove file and line.
+	* c-typeck.c (pop_init_level): Remove size.
+
 2001-11-07  Aldy Hernandez  <aldyh@redhat.com>
 
 	* doc/invoke.texi: Add -maltivec, -mno-altivec, and -mabi=altivec
