--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* dwarf2asm.c (mark_indirect_pool_entry, mark_indirect_pool): New.
+	(USE_LINKONCE_INDIRECT): Define.
+	(dw2_output_indirect_constant_1): Try to output indirect constants
+	into linkonce sections if possible.
+	(dw2_force_const_mem): Likewise.  Register indirect_pool with GGC.
+	(dw2_output_indirect_constants): Likewise.
+
 2001-11-07  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/rs6000.h (REG_ALLOC_ORDER): Add vrsave.
