2001-11-07  Aldy Hernandez  <aldyh@redhat.com>
	 * objc-api.h (_C_VECTOR): New.

	 * encoding.c (VECTOR_TYPE): New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46849 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-07  Aldy Hernandez  <aldyh@redhat.com>
+
+	 * objc/objc-api.h (_C_VECTOR): New.
+
+	 * encoding.c (VECTOR_TYPE): New.
+
 Mon Oct 29 21:29:21 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* class.c: Rewritten the class table to use optimized, lock-free
