--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-08  Richard Henderson  <rth@redhat.com>
+
+	* config/fp-bit.h (usi_to_float): Define for US_SOFTWARE_GOFAST
+	case as well.
+
 2001-11-08  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa.md (negdf2, negsf2): Use multiplication rather than subtraction
