--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-08  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cp/decl.c (shadow_warning): New function.
+	(pushdecl): Improve -Wshadow warnings.  Don't give both a warning
+	and an error when a block scope decl shadows a parameter.
+
 2001-11-08  Richard Henderson  <rth@redhat.com>
 
 	* config/fp-bit.h (usi_to_float): Define for US_SOFTWARE_GOFAST
