--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-08  Richard Henderson  <rth@redhat.com>
+
+	* config/mips/mips.c (save_restore_insns): Remove GP from the
+	restore registers mask early instead of special casing it inside
+	the loop.
+
 2001-11-08  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cp/decl.c (shadow_warning): New function.
