--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-08  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.h (ASM_CPU_SPEC): Add -maltivec.
+
 2001-11-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* dwarf2out.c (debug_str_hash): New.
