--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Thu Nov  8 16:23:51 2001  Jeffrey A Law  (law@cygnus.com)
+
+	* pa.c (emit_move_sequence): Fix SUBREG expression to
+	use proper byte offset when extending a constant from
+	SImode to DImode.
+
 2001-11-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* cfgrtl.c (purge_dead_edges): Remove REG_EH_REGION note for insns
