--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov  8 18:00:55 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (emit_block_move): If X is readonly emit CLOBBER for it.
+	(clear_storage): Likewise, for OBJECT.
+
 Thu Nov  8 16:23:51 2001  Jeffrey A Law  (law@cygnus.com)
 
 	* pa.c (emit_move_sequence): Fix SUBREG expression to
