* reload1.c (reload): Don't delete equiv insn if can throw.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46866 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Thu Nov  8 18:00:55 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* reload1.c (reload): Don't delete equiv insn if can throw.
+
 	* expr.c (emit_block_move): If X is readonly emit CLOBBER for it.
 	(clear_storage): Likewise, for OBJECT.
 
