In ChangeLog: 2001-11-08  Geoffrey Keating  <geoffk@redhat.com>
	* config.sub: Import from master sources, rev. 1.230.
	* MAINTAINERS: Change 'stormy16' to 'xstormy16'.

Index: gcc/ChangeLog
2001-11-08  Geoffrey Keating  <geoffk@redhat.com>

	* config.gcc: Rename stormy16 to xstormy16.
	* config/stormy16/stormy-abi: Likewise.
	* config/stormy16/stormy16-protos.h: Likewise.
	* config/stormy16/stormy16.c: Likewise.
	* config/stormy16/stormy16.h: Likewise.
	* config/stormy16/stormy16.md: Likewise.

Index: gcc/testsuite/ChangeLog
2001-11-08  Geoffrey Keating  <geoffk@redhat.com>

	* g++.old-deja/g++.bugs/900227_01.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.eh/badalloc1.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.mike/ns15.C: Change stormy16 to xstormy16.
	* g++.old-deja/g++.pt/crash16.C: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/961203-1.x: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/980506-1.x: Change stormy16 to xstormy16.
	* gcc.c-torture/compile/990617-1.x: Change stormy16 to xstormy16.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46867 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-08  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config.sub: Import from master sources, rev. 1.230.
+	* MAINTAINERS: Change 'stormy16' to 'xstormy16'.
+
 2001-11-07  Laurent Guerby  <guerby@acm.org>
 
 	* MAINTAINERS (Write After Approval): Add self.
