* configure.in (--enable-languages): Be more permissive about syntax.  Check for empty lists better.  Warn about $LANGUAGES.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-08  Phil Edwards  <pedwards@disaster.jaj.com>
+
+	* configure.in (--enable-languages): Be more permissive about
+	syntax.  Check for empty lists better.  Warn about $LANGUAGES.
+
 2001-11-08  Geoffrey Keating  <geoffk@redhat.com>
 
 	* config.sub: Import from master sources, rev. 1.230.
