--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-08  Phil Edwards  <pedwards@disaster.jaj.com>
+
+	* configure.in (--enable-languages): Be more permissive about
+	syntax.  Check for empty lists better.  Warn about $LANGUAGES.
+	* configure: Regenerated.
+
 2001-11-08  Richard Henderson  <rth@redhat.com>
 
 	* dwarf2asm.c (dw2_force_const_mem): Fix typo.
