--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-08  Kazu Hirata  <kazu@hxi.com>
+
+	* config/1750a/1750a.c: Fix comment formatting.
+	* config/1750a/1750a.h: Likewise.
+
 2001-11-08  Phil Edwards  <pedwards@disaster.jaj.com>
 
 	* configure.in (--enable-languages): Be more permissive about
