* doc/install.texi2html: Use $MAKEINFO --no-split.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46879 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-09  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/install.texi2html: Use $MAKEINFO --no-split.
+
 2001-11-09  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in ($(HOST_PREFIX_1)rtl.o,
