* config/sparc/sparc.md (movdf): Avoid calling validize_mem during 	or after reload.
	* gcc.c-torture/compile/20011109-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46880 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-09  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/sparc/sparc.md (movdf): Avoid calling validize_mem during
+	or after reload.
+
 2001-11-09  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/install.texi2html: Use $MAKEINFO --no-split.
