--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-09  Jeff Sturm  <jsturm@one-point.com>
+
+	* verify.cc: Wrap in #ifdef INTERPRETER...#endif.
+
 2001-11-07  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (skip_padding): Fail if padding byte is nonzero.
