--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-09  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* MAINTAINERS (Various maintainers: hppa port): Added myself.
+
 2001-11-08  Phil Edwards  <pedwards@disaster.jaj.com>
 
 	* configure.in (--enable-languages): Be more permissive about
