* MAINTAINERS (Various maintainers: h8 port): Add myself.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46888 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-09  Kazu Hirata  <kazu@hxi.com>
+
+	* MAINTAINERS (Various maintainers: h8 port): Add myself.
+
 2001-11-09  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* MAINTAINERS (Various maintainers: hppa port): Added myself.
